--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
-aiohttp==3.7.4.post0
-async-timeout==3.0.1
-attrs==21.2.0
-chardet==4.0.0
-discord.py==1.7.3
-idna==3.2
-multidict==5.1.0
-typing-extensions==3.10.0.0
-yarl==1.6.3
+git+https://github.com/Pycord-Development/pycord
+beautifulsoup4>=4.9.1
+requests>=2.26.0
+psycopg2>=2.9.1
+Pillow >= 8.3.2
+PyNaCl>=1.5.0
+qrcode >= 7.3
+jaconv~=0.3
+youtube_dl
+
+pafy
+google-cloud-vision >= 3.0.0
+python-Levenshtein >= 0.12.2
